[gd_scene load_steps=2 format=2]

[ext_resource path="res://menu/ServerMenu.gd" type="Script" id=1]

[node name="ServerMenu" type="Node2D"]
script = ExtResource( 1 )

[node name="ServerMenuTitle" type="Label" parent="."]
margin_left = 448.0
margin_top = 150.0
margin_right = 576.0
margin_bottom = 214.0
text = "PONG

AS A SERVICE


start server"
align = 1
valign = 1

[node name="ServerInputContainer" type="HBoxContainer" parent="."]
margin_left = 256.0
margin_top = 443.158
margin_right = 768.0
margin_bottom = 483.158
custom_constants/separation = 101
alignment = 1

[node name="PortMarginContainer" type="MarginContainer" parent="ServerInputContainer"]
margin_left = 68.0
margin_right = 126.0
margin_bottom = 40.0

[node name="PortInput" type="LineEdit" parent="ServerInputContainer/PortMarginContainer"]
margin_right = 58.0
margin_bottom = 40.0
text = "6007"

[node name="PlayersMarginContainer" type="MarginContainer" parent="ServerInputContainer"]
margin_left = 227.0
margin_right = 285.0
margin_bottom = 40.0

[node name="PlayersInput" type="LineEdit" parent="ServerInputContainer/PlayersMarginContainer"]
margin_right = 58.0
margin_bottom = 40.0
text = "2"

[node name="PointsMarginContainer" type="MarginContainer" parent="ServerInputContainer"]
margin_left = 386.0
margin_right = 444.0
margin_bottom = 40.0

[node name="PointsInput" type="LineEdit" parent="ServerInputContainer/PointsMarginContainer"]
margin_right = 58.0
margin_bottom = 40.0
text = "3"

[node name="ServerInputLabelsContainer" type="HBoxContainer" parent="."]
editor/display_folded = true
margin_left = 256.0
margin_top = 483.0
margin_right = 768.0
margin_bottom = 523.0
custom_constants/separation = 101
alignment = 1

[node name="PortMarginContainer" type="MarginContainer" parent="ServerInputLabelsContainer"]
margin_left = 83.0
margin_right = 109.0
margin_bottom = 40.0

[node name="PortLabel" type="Label" parent="ServerInputLabelsContainer/PortMarginContainer"]
margin_top = 13.0
margin_right = 26.0
margin_bottom = 27.0
text = "port"
align = 1
valign = 1

[node name="PlayersMarginContainer" type="MarginContainer" parent="ServerInputLabelsContainer"]
margin_left = 210.0
margin_right = 287.0
margin_bottom = 40.0

[node name="PlayersLabel" type="Label" parent="ServerInputLabelsContainer/PlayersMarginContainer"]
margin_top = 4.0
margin_right = 77.0
margin_bottom = 35.0
text = "max players
allowed"
align = 1
valign = 1

[node name="PointsMarginContainer" type="MarginContainer" parent="ServerInputLabelsContainer"]
margin_left = 388.0
margin_right = 428.0
margin_bottom = 40.0

[node name="PointsLabel" type="Label" parent="ServerInputLabelsContainer/PointsMarginContainer"]
margin_top = 4.0
margin_right = 40.0
margin_bottom = 35.0
text = "points
to win"
align = 1
valign = 1

[node name="ActionButtonsContainer" type="HBoxContainer" parent="."]
margin_left = 256.0
margin_top = 563.0
margin_right = 768.0
margin_bottom = 603.0
custom_constants/separation = 101
alignment = 1

[node name="StartMarginContainer" type="MarginContainer" parent="ActionButtonsContainer"]
margin_left = 89.0
margin_right = 139.0
margin_bottom = 40.0

[node name="StartButton" type="Button" parent="ActionButtonsContainer/StartMarginContainer"]
margin_right = 50.0
margin_bottom = 40.0
text = "START"

[node name="BackMarginContainer" type="MarginContainer" parent="ActionButtonsContainer"]
margin_left = 240.0
margin_right = 282.0
margin_bottom = 40.0

[node name="BackButton" type="Button" parent="ActionButtonsContainer/BackMarginContainer"]
margin_right = 42.0
margin_bottom = 40.0
text = "Back"

[node name="QuitMarginContainer" type="MarginContainer" parent="ActionButtonsContainer"]
margin_left = 383.0
margin_right = 423.0
margin_bottom = 40.0

[node name="QuitButton" type="Button" parent="ActionButtonsContainer/QuitMarginContainer"]
margin_right = 40.0
margin_bottom = 40.0
text = "Quit"
